# dime_take_home

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dime_take_home/: __init__.py  dataset.py  features.py  plots.py  utils.py
dime_take_home/modeling/: predict.py  train.py
notebooks/: 00_eda.ipynb  01_analysis.ipynb  01_processing.ipynb  02_analysis.ipynb  03_validation.ipynb  eda.ipynb  technical-assessment.ipynb
reports/: report.md
