[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dime_take_home"
version = "0.0.1"
description = "Take home test for DIME WOrld Bank"
authors = [
  { name = "Alex Rutherford" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dime_take_home"]
include = ["pyproject.toml", "dime_take_home/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dime_take_home"]
force-sort-within-sections = true

